--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -57,8 +57,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Data\ItemData.cs" />
     <Compile Include="Assets\Data\PlayerData.cs" />
-    <Compile Include="Assets\Data\QuanityData.cs" />
     <Compile Include="Assets\Scripts\ButtonOne.cs" />
     <Compile Include="Assets\Scripts\ButtonTwo.cs" />
     <Compile Include="Assets\Scripts\Player.cs" />
